Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Hello World</h1>
-        <img src="profile.jpg" alt="My Photo" class="profile-pic">
+        <img src="71M49o3HpYL.jpg" alt="My Photo" class="profile-pic">
         <button class="contact-btn">Contact Me</button>
     </div>
 </body>
