Add a test button and adjust layout for better alignment and spacing

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Hello World</h1>
         <img src="71M49o3HpYL.jpg" alt="My Photo" class="profile-pic">
         <button class="contact-btn">Contact Me</button>
+        <button class="contact-btn test-btn">Test</button>
     </div>
 </body>
 </html>
