--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- 3D rotating Christmas tree (background, sits behind the card) -->
+    <div class="tree-scene" aria-hidden="false" role="img" aria-label="Decorative 3D Christmas tree">
+        <div class="tree" aria-hidden="true">
+            <div class="star">★</div>
+            <div class="layer l1"></div>
+            <div class="layer l2"></div>
+            <div class="layer l3"></div>
+            <div class="layer l4"></div>
+            <div class="layer l5"></div>
+            <div class="trunk"></div>
+
+            <!-- lights (positioned with CSS vars) -->
+            <span class="light" style="--x:38%; --y:34%; --c:#ffeb3b; --d:0s;"></span>
+            <span class="light" style="--x:62%; --y:42%; --c:#ff3b8f; --d:0.2s;"></span>
+            <span class="light" style="--x:46%; --y:56%; --c:#4caf50; --d:0.4s;"></span>
+            <span class="light" style="--x:30%; --y:68%; --c:#00bcd4; --d:0.6s;"></span>
+            <span class="light" style="--x:70%; --y:74%; --c:#ff9800; --d:0.8s;"></span>
+        </div>
+    </div>
+
     <div class="container">
-        <h1>Hello World</h1>
+        <h1>Hello World!!!!!</h1>
+
         <img src="71M49o3HpYL.jpg" alt="My Photo" class="profile-pic">
         <button class="contact-btn">Contact Me</button>
         <button class="contact-btn test-btn">Test</button>
